# packet_counter

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  run-privileged.sh  rust-toolchain.toml
.cargo/: config.toml
dev/: dev.sh  ebpf-dev.yaml  teardown.sh
packet-counter/: AGENTS.md  Cargo.toml  build.rs
packet-counter-common/: AGENTS.md  Cargo.toml
packet-counter-common/src/: lib.rs
packet-counter-ebpf/: AGENTS.md  Cargo.toml  build.rs
packet-counter-ebpf/src/: main.rs
packet-counter/src/: main.rs
web/: AGENTS.md  index.html  package-lock.json  package.json
web/src/: App.css  App.tsx  types.ts  useStats.ts
