[workspace]
members = [
    "packet-counter",
    "packet-counter-common",
    "packet-counter-ebpf",
]
default-members = [
    "packet-counter",
    "packet-counter-common",
]
resolver = "2"

[workspace.dependencies]
anyhow   = { version = "1" }
# aya does not publish timely releases to crates.io — the published crates lag
# months behind git HEAD.  Pin to the same commit used by packet-interceptor,
# which is proven to work end-to-end with nightly + bpf-linker.
# To update: replace the rev with the output of:
#   git ls-remote https://github.com/aya-rs/aya HEAD
aya      = { git = "https://github.com/aya-rs/aya", rev = "bddbcfbfc83cbdb2c95365e8b6749f244c37fb4b" }
aya-build = { git = "https://github.com/aya-rs/aya", rev = "bddbcfbfc83cbdb2c95365e8b6749f244c37fb4b" }
aya-ebpf = { git = "https://github.com/aya-rs/aya", rev = "bddbcfbfc83cbdb2c95365e8b6749f244c37fb4b" }
aya-log  = { git = "https://github.com/aya-rs/aya", rev = "bddbcfbfc83cbdb2c95365e8b6749f244c37fb4b" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", rev = "bddbcfbfc83cbdb2c95365e8b6749f244c37fb4b" }
clap          = { version = "4", features = ["derive"] }
env_logger    = { version = "0.11" }
log           = { version = "0.4" }
network-types = { version = "0.1.0" }
tokio         = { version = "1", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "time"] }
axum          = { version = "0.7" }
serde         = { version = "1", features = ["derive"] }
serde_json    = { version = "1" }
tower-http    = { version = "0.5", features = ["cors"] }

[profile.release]
lto   = true
panic = "abort"

[profile.dev]
panic = "abort"
