[package]
name    = "packet-counter-ebpf"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya-ebpf              = { workspace = true }
aya-log-ebpf          = { workspace = true }
network-types         = { workspace = true }
packet-counter-common = { path = "../packet-counter-common" }

[[bin]]
name = "packet-counter-ebpf"
path = "src/main.rs"
