[package]
name    = "packet-counter"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow     = { workspace = true }
aya        = { workspace = true }
aya-log    = { workspace = true }
clap       = { workspace = true }
env_logger = { workspace = true }
log        = { workspace = true }
tokio      = { workspace = true }

[build-dependencies]
aya-build = { workspace = true }

[[bin]]
name = "packet-counter"
path = "src/main.rs"
